--- a/Labsetup/Files/kernel_module/Makefile
+++ b/Labsetup/Files/kernel_module/Makefile
@@ -1,8 +1,8 @@
 obj-m += hello.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) clean
 
